--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@retalappcomponents/example",
+  "name": "@retalappcomponentes/example",
   "version": "2.0.0",
   "description": "> TODO: description",
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
@@ -22,5 +22,6 @@
   },
   "bugs": {
     "url": "https://github.com/kevinRetalapp/RetalappCore/issues"
-  }
+  },
+  "gitHead": "670ff116be9e42a51bee8c42342091070423eab1"
 }
