--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "retalappcomponentes",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
