--- a/packages/testCdn/package.json
+++ b/packages/testCdn/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@retalappcomponentes/testcdnretalapp",
-  "version": "2.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "version": "3.0.0",
   "description": "> TODO: description",
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
   "homepage": "https://github.com/kevinRetalapp/RetalappCore/tree/main/packages/testcdn#readme",
@@ -23,5 +26,5 @@
   "bugs": {
     "url": "https://github.com/kevinRetalapp/RetalappCore/issues"
   },
-  "gitHead": "670ff116be9e42a51bee8c42342091070423eab1"
+  "gitHead": "ae98b1b372d9f401b729e1e3c5403376517a9f04"
 }
