--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "retalappcomponentes",
+  "name": "testretalapp",
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.1.2",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "lerna run test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
