--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "testretalapp",
-  "publishConfig": {
-    "access": "public"
-  },
+  "name": "retalappcore",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,6 +18,13 @@
   },
   "homepage": "https://github.com/kevinRetalapp/RetalappCore#readme",
   "devDependencies": {
-    "lerna": "^4.0.0"
-  }
+    "@babel/core": "^7.16.0",
+    "babel-loader": "^8.2.3",
+    "lerna": "^4.0.0",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
