--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@testretalapp/exampletwo",
-  "publishConfig": {
-    "access": "public"
-  },
-  "version": "0.0.0",
+  "name": "componentretalapp",
+  "version": "1.0.0",
   "description": "> TODO: description",
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
-  "homepage": "https://github.com/kevinRetalapp/RetalappCore/tree/main/packages/exampletwo#readme",
+  "homepage": "https://github.com/kevinRetalapp/RetalappCore/tree/main/packages/component#readme",
   "license": "ISC",
-  "main": "lib/exampletwo.js",
+  "main": "lib/component.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
