--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "browserslist": [
+    ">0.1%",
+    "last 4 versions"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kevinRetalapp/RetalappCore.git"
@@ -19,8 +24,15 @@
   "homepage": "https://github.com/kevinRetalapp/RetalappCore#readme",
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.5",
+    "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.2.0",
     "lerna": "^4.0.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   },
