--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,7 @@
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
   "homepage": "https://github.com/kevinRetalapp/RetalappCore/tree/main/packages/core#readme",
   "license": "ISC",
-  "main": "lib/core.js",
+  "main": "build/core.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
