--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -22,5 +22,6 @@
   },
   "bugs": {
     "url": "https://github.com/kevinRetalapp/RetalappCore/issues"
-  }
+  },
+  "gitHead": "16ae81e108e50a95b99826e9adef82204ffb25b2"
 }
