--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@retalapp/core",
+  "name": "@lernaretalapp/core",
   "version": "3.0.4",
   "description": "> TODO: description",
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
@@ -22,5 +22,6 @@
   },
   "bugs": {
     "url": "https://github.com/kevinRetalapp/RetalappCore/issues"
-  }
+  },
+  "gitHead": "16ae81e108e50a95b99826e9adef82204ffb25b2"
 }
