--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://github.com/kevinRetalapp/RetalappCore/tree/main/packages/component#readme",
   "license": "ISC",
   "main": "build/component.js",
+  "publishConfig": {"access": "public"},
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -23,5 +24,5 @@
   "bugs": {
     "url": "https://github.com/kevinRetalapp/RetalappCore/issues"
   },
-  "gitHead": "16ae81e108e50a95b99826e9adef82204ffb25b2"
+  "gitHead": "5b659c1ee11cffc87e2bd9a9a74eb3adfc986f40"
 }
