--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,7 @@
   "description": "> TODO: description",
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
   "homepage": "https://github.com/kevinRetalapp/RetalappCore/tree/main/packages/core#readme",
+  "publishConfig": {"access": "public"},
   "license": "ISC",
   "main": "build/core.js",
   "directories": {
@@ -23,5 +24,5 @@
   "bugs": {
     "url": "https://github.com/kevinRetalapp/RetalappCore/issues"
   },
-  "gitHead": "16ae81e108e50a95b99826e9adef82204ffb25b2"
+  "gitHead": "5b659c1ee11cffc87e2bd9a9a74eb3adfc986f40"
 }
