--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -1,12 +1,14 @@
 {
   "name": "componentretalapp",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "description": "> TODO: description",
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
   "homepage": "https://github.com/kevinRetalapp/RetalappCore/tree/main/packages/component#readme",
   "license": "ISC",
   "main": "build/component.js",
-  "publishConfig": {"access": "public"},
+  "publishConfig": {
+    "access": "public"
+  },
   "directories": {
     "lib": "lib",
     "test": "__tests__"
