--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@lernaretalapp/core",
-  "version": "3.0.5",
+  "version": "4.0.0",
   "description": "> TODO: description",
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
   "homepage": "https://github.com/kevinRetalapp/RetalappCore/tree/main/packages/core#readme",
-  "publishConfig": {"access": "public"},
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "ISC",
   "main": "build/core.js",
   "directories": {
