--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "componentretalapp",
+  "name": "@lernaretalapp/componentretalapp",
   "version": "6.0.0",
   "description": "> TODO: description",
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
@@ -26,5 +26,5 @@
   "bugs": {
     "url": "https://github.com/kevinRetalapp/RetalappCore/issues"
   },
-  "gitHead": "5b659c1ee11cffc87e2bd9a9a74eb3adfc986f40"
+  "gitHead": "5778105b5012f960e4234e0eb95fb0d7d820d982"
 }
