--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lernaretalapp/core",
+  "name": "changename",
   "version": "4.0.1",
   "description": "> TODO: description",
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
@@ -26,5 +26,5 @@
   "bugs": {
     "url": "https://github.com/kevinRetalapp/RetalappCore/issues"
   },
-  "gitHead": "5778105b5012f960e4234e0eb95fb0d7d820d982"
+  "gitHead": "4309097dee60d20dd49e89f85cf22f1737e420ce"
 }
