--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kentruriretalapp/changename",
-  "version": "5.0.0",
+  "version": "5.0.1-alpha.0",
   "description": "> TODO: description",
   "author": "kevinRetalapp <kevin.steven@retalapp.co>",
   "homepage": "https://github.com/kevinRetalapp/RetalappCore/tree/main/packages/core#readme",
