--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "lernaretalapp",
   "version": "2.0.0",
-  "description": "",
+  "description": "CSS Component library",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "browserslist": [
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/kevinRetalapp/RetalappCore.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "hi@retalapp.co",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kevinRetalapp/RetalappCore/issues"
